--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-12 15:11+0900\n"
+"POT-Creation-Date: 2023-12-14 14:43+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,12 +18,12 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: app_blog/models.py:9
-msgid "contenido"
+#: app_blog/models.py:9 app_portfolio/models.py:11
+msgid "titulo"
 msgstr ""
 
-#: app_blog/models.py:12 app_portfolio/models.py:11
-msgid "titulo"
+#: app_blog/models.py:10
+msgid "contenido"
 msgstr ""
 
 #: app_blog/templates/posts.html:6
@@ -45,7 +45,13 @@ msgid ""
 "implementation of complete and efficient web applications. My versatile "
 "approach has allowed me to contribute to both client-side and server-side "
 "development, providing comprehensive and functional solutions."
-msgstr "Desarrollador full-stack especializado en Python con una sólida formación en ingeniería de software y experiencia probada en el diseño, desarrollo e implementación de aplicaciones web completas y eficientes. Mi enfoque versátil me ha permitido contribuir al desarrollo tanto del lado del cliente como del lado del servidor, proporcionando soluciones integrales y funcionales."
+msgstr ""
+"Desarrollador full-stack especializado en Python con una sólida formación en "
+"ingeniería de software y experiencia probada en el diseño, desarrollo e "
+"implementación de aplicaciones web completas y eficientes. Mi enfoque "
+"versátil me ha permitido contribuir al desarrollo tanto del lado del cliente "
+"como del lado del servidor, proporcionando soluciones integrales y "
+"funcionales."
 
 #: app_portfolio/templates/home.html:36
 msgid "My Projects"
@@ -56,9 +62,16 @@ msgid ""
 "Each project is a journey where curiosity and creativity intertwine, guiding "
 "me through challenges towards ingenious solutions and exceptional digital "
 "experiences."
-msgstr "Cada proyecto es un viaje en el que la curiosidad y la creatividad se entrelazan, guiándome a través de los retos hacia soluciones ingeniosas y experiencias digitales excepcionales."
+msgstr ""
+"Cada proyecto es un viaje en el que la curiosidad y la creatividad se "
+"entrelazan, guiándome a través de los retos hacia soluciones ingeniosas y "
+"experiencias digitales excepcionales."
 
-#: app_portfolio/templates/partials/navbar.html:19
+#: app_portfolio/templates/partials/navbar.html:35
+msgid "Go"
+msgstr "Ir"
+
+#: app_portfolio/templates/partials/navbar.html:39
 msgid "Download CV"
 msgstr "Descargar CV"
 
